3_Ano/2_sem/PL/PL_Grupo24/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_units
Rule 2     program_units -> program_unit
Rule 3     program_units -> program_units program_unit
Rule 4     program_unit -> main_program
Rule 5     program_unit -> subroutine
Rule 6     program_unit -> function
Rule 7     main_program -> PROGRAM IDENTIFIER statements END
Rule 8     main_program -> PROGRAM IDENTIFIER END
Rule 9     statements -> statement
Rule 10    statements -> statements statement
Rule 11    statement -> declaration
Rule 12    statement -> assignment
Rule 13    statement -> print_stmt
Rule 14    statement -> read_stmt
Rule 15    statement -> if_stmt
Rule 16    statement -> do_loop
Rule 17    statement -> goto_stmt
Rule 18    statement -> call_stmt
Rule 19    statement -> return_stmt
Rule 20    declaration -> type_spec var_list
Rule 21    type_spec -> INTEGER
Rule 22    type_spec -> REAL
Rule 23    type_spec -> LOGICAL
Rule 24    var_list -> IDENTIFIER
Rule 25    var_list -> var_list COMMA IDENTIFIER
Rule 26    assignment -> IDENTIFIER ASSIGN expression
Rule 27    print_stmt -> PRINT TIMES print_list
Rule 28    print_list -> COMMA expression
Rule 29    print_list -> print_list COMMA expression
Rule 30    read_stmt -> READ TIMES read_list
Rule 31    read_list -> COMMA IDENTIFIER
Rule 32    read_list -> read_list COMMA IDENTIFIER
Rule 33    if_stmt -> IF LPAREN expression RPAREN THEN statements ENDIF
Rule 34    if_stmt -> IF LPAREN expression RPAREN THEN statements ELSE statements ENDIF
Rule 35    do_loop -> DO NUMBER IDENTIFIER ASSIGN expression COMMA expression statements NUMBER CONTINUE
Rule 36    goto_stmt -> GOTO NUMBER
Rule 37    expression -> expr_or
Rule 38    expr_or -> expr_and
Rule 39    expr_or -> expr_or OR expr_and
Rule 40    expr_and -> expr_not
Rule 41    expr_and -> expr_and AND expr_not
Rule 42    expr_not -> expr_rel
Rule 43    expr_not -> NOT expr_not
Rule 44    expr_rel -> expr_arith
Rule 45    expr_rel -> expr_arith EQ expr_arith
Rule 46    expr_rel -> expr_arith NE expr_arith
Rule 47    expr_rel -> expr_arith LT expr_arith
Rule 48    expr_rel -> expr_arith LE expr_arith
Rule 49    expr_rel -> expr_arith GT expr_arith
Rule 50    expr_rel -> expr_arith GE expr_arith
Rule 51    expr_arith -> term
Rule 52    expr_arith -> expr_arith PLUS term
Rule 53    expr_arith -> expr_arith MINUS term
Rule 54    term -> factor
Rule 55    term -> term TIMES factor
Rule 56    term -> term DIVIDE factor
Rule 57    factor -> primary
Rule 58    factor -> MINUS factor
Rule 59    primary -> NUMBER
Rule 60    primary -> REAL_NUMBER
Rule 61    primary -> STRING
Rule 62    primary -> TRUE
Rule 63    primary -> FALSE
Rule 64    primary -> IDENTIFIER
Rule 65    primary -> LPAREN expression RPAREN
Rule 66    subroutine -> SUBROUTINE IDENTIFIER LPAREN param_list RPAREN statements END
Rule 67    subroutine -> SUBROUTINE IDENTIFIER statements END
Rule 68    function -> type_spec FUNCTION IDENTIFIER LPAREN param_list RPAREN statements END
Rule 69    function -> type_spec FUNCTION IDENTIFIER statements END
Rule 70    param_list -> IDENTIFIER
Rule 71    param_list -> param_list COMMA IDENTIFIER
Rule 72    call_stmt -> CALL IDENTIFIER LPAREN arg_list RPAREN
Rule 73    call_stmt -> CALL IDENTIFIER
Rule 74    return_stmt -> RETURN
Rule 75    arg_list -> expression
Rule 76    arg_list -> arg_list COMMA expression
Rule 77    primary -> IDENTIFIER LPAREN arg_list RPAREN

Terminals, with rules where they appear

AND                  : 41
ASSIGN               : 26 35
CALL                 : 72 73
COMMA                : 25 28 29 31 32 35 71 76
CONTINUE             : 35
DIVIDE               : 56
DO                   : 35
ELSE                 : 34
END                  : 7 8 66 67 68 69
ENDIF                : 33 34
EQ                   : 45
FALSE                : 63
FUNCTION             : 68 69
GE                   : 50
GOTO                 : 36
GT                   : 49
IDENTIFIER           : 7 8 24 25 26 31 32 35 64 66 67 68 69 70 71 72 73 77
IF                   : 33 34
INTEGER              : 21
LE                   : 48
LOGICAL              : 23
LPAREN               : 33 34 65 66 68 72 77
LT                   : 47
MINUS                : 53 58
NE                   : 46
NOT                  : 43
NUMBER               : 35 35 36 59
OR                   : 39
PLUS                 : 52
PRINT                : 27
PROGRAM              : 7 8
READ                 : 30
REAL                 : 22
REAL_NUMBER          : 60
RETURN               : 74
RPAREN               : 33 34 65 66 68 72 77
STRING               : 61
SUBROUTINE           : 66 67
THEN                 : 33 34
TIMES                : 27 30 55
TRUE                 : 62
error                : 

Nonterminals, with rules where they appear

arg_list             : 72 76 77
assignment           : 12
call_stmt            : 18
declaration          : 11
do_loop              : 16
expr_and             : 38 39 41
expr_arith           : 44 45 45 46 46 47 47 48 48 49 49 50 50 52 53
expr_not             : 40 41 43
expr_or              : 37 39
expr_rel             : 42
expression           : 26 28 29 33 34 35 35 65 75 76
factor               : 54 55 56 58
function             : 6
goto_stmt            : 17
if_stmt              : 15
main_program         : 4
param_list           : 66 68 71
primary              : 57
print_list           : 27 29
print_stmt           : 13
program              : 0
program_unit         : 2 3
program_units        : 1 3
read_list            : 30 32
read_stmt            : 14
return_stmt          : 19
statement            : 9 10
statements           : 7 10 33 34 34 35 66 67 68 69
subroutine           : 5
term                 : 51 52 53 55 56
type_spec            : 20 68 69
var_list             : 20 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_units
    (2) program_units -> . program_unit
    (3) program_units -> . program_units program_unit
    (4) program_unit -> . main_program
    (5) program_unit -> . subroutine
    (6) program_unit -> . function
    (7) main_program -> . PROGRAM IDENTIFIER statements END
    (8) main_program -> . PROGRAM IDENTIFIER END
    (66) subroutine -> . SUBROUTINE IDENTIFIER LPAREN param_list RPAREN statements END
    (67) subroutine -> . SUBROUTINE IDENTIFIER statements END
    (68) function -> . type_spec FUNCTION IDENTIFIER LPAREN param_list RPAREN statements END
    (69) function -> . type_spec FUNCTION IDENTIFIER statements END
    (21) type_spec -> . INTEGER
    (22) type_spec -> . REAL
    (23) type_spec -> . LOGICAL

    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 8
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12

    program                        shift and go to state 1
    program_units                  shift and go to state 2
    program_unit                   shift and go to state 3
    main_program                   shift and go to state 4
    subroutine                     shift and go to state 5
    function                       shift and go to state 6
    type_spec                      shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> program_units .
    (3) program_units -> program_units . program_unit
    (4) program_unit -> . main_program
    (5) program_unit -> . subroutine
    (6) program_unit -> . function
    (7) main_program -> . PROGRAM IDENTIFIER statements END
    (8) main_program -> . PROGRAM IDENTIFIER END
    (66) subroutine -> . SUBROUTINE IDENTIFIER LPAREN param_list RPAREN statements END
    (67) subroutine -> . SUBROUTINE IDENTIFIER statements END
    (68) function -> . type_spec FUNCTION IDENTIFIER LPAREN param_list RPAREN statements END
    (69) function -> . type_spec FUNCTION IDENTIFIER statements END
    (21) type_spec -> . INTEGER
    (22) type_spec -> . REAL
    (23) type_spec -> . LOGICAL

    $end            reduce using rule 1 (program -> program_units .)
    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 8
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12

    program_unit                   shift and go to state 13
    main_program                   shift and go to state 4
    subroutine                     shift and go to state 5
    function                       shift and go to state 6
    type_spec                      shift and go to state 9

state 3

    (2) program_units -> program_unit .

    PROGRAM         reduce using rule 2 (program_units -> program_unit .)
    SUBROUTINE      reduce using rule 2 (program_units -> program_unit .)
    INTEGER         reduce using rule 2 (program_units -> program_unit .)
    REAL            reduce using rule 2 (program_units -> program_unit .)
    LOGICAL         reduce using rule 2 (program_units -> program_unit .)
    $end            reduce using rule 2 (program_units -> program_unit .)


state 4

    (4) program_unit -> main_program .

    PROGRAM         reduce using rule 4 (program_unit -> main_program .)
    SUBROUTINE      reduce using rule 4 (program_unit -> main_program .)
    INTEGER         reduce using rule 4 (program_unit -> main_program .)
    REAL            reduce using rule 4 (program_unit -> main_program .)
    LOGICAL         reduce using rule 4 (program_unit -> main_program .)
    $end            reduce using rule 4 (program_unit -> main_program .)


state 5

    (5) program_unit -> subroutine .

    PROGRAM         reduce using rule 5 (program_unit -> subroutine .)
    SUBROUTINE      reduce using rule 5 (program_unit -> subroutine .)
    INTEGER         reduce using rule 5 (program_unit -> subroutine .)
    REAL            reduce using rule 5 (program_unit -> subroutine .)
    LOGICAL         reduce using rule 5 (program_unit -> subroutine .)
    $end            reduce using rule 5 (program_unit -> subroutine .)


state 6

    (6) program_unit -> function .

    PROGRAM         reduce using rule 6 (program_unit -> function .)
    SUBROUTINE      reduce using rule 6 (program_unit -> function .)
    INTEGER         reduce using rule 6 (program_unit -> function .)
    REAL            reduce using rule 6 (program_unit -> function .)
    LOGICAL         reduce using rule 6 (program_unit -> function .)
    $end            reduce using rule 6 (program_unit -> function .)


state 7

    (7) main_program -> PROGRAM . IDENTIFIER statements END
    (8) main_program -> PROGRAM . IDENTIFIER END

    IDENTIFIER      shift and go to state 14


state 8

    (66) subroutine -> SUBROUTINE . IDENTIFIER LPAREN param_list RPAREN statements END
    (67) subroutine -> SUBROUTINE . IDENTIFIER statements END

    IDENTIFIER      shift and go to state 15


state 9

    (68) function -> type_spec . FUNCTION IDENTIFIER LPAREN param_list RPAREN statements END
    (69) function -> type_spec . FUNCTION IDENTIFIER statements END

    FUNCTION        shift and go to state 16


state 10

    (21) type_spec -> INTEGER .

    FUNCTION        reduce using rule 21 (type_spec -> INTEGER .)
    IDENTIFIER      reduce using rule 21 (type_spec -> INTEGER .)


state 11

    (22) type_spec -> REAL .

    FUNCTION        reduce using rule 22 (type_spec -> REAL .)
    IDENTIFIER      reduce using rule 22 (type_spec -> REAL .)


state 12

    (23) type_spec -> LOGICAL .

    FUNCTION        reduce using rule 23 (type_spec -> LOGICAL .)
    IDENTIFIER      reduce using rule 23 (type_spec -> LOGICAL .)


state 13

    (3) program_units -> program_units program_unit .

    PROGRAM         reduce using rule 3 (program_units -> program_units program_unit .)
    SUBROUTINE      reduce using rule 3 (program_units -> program_units program_unit .)
    INTEGER         reduce using rule 3 (program_units -> program_units program_unit .)
    REAL            reduce using rule 3 (program_units -> program_units program_unit .)
    LOGICAL         reduce using rule 3 (program_units -> program_units program_unit .)
    $end            reduce using rule 3 (program_units -> program_units program_unit .)


state 14

    (7) main_program -> PROGRAM IDENTIFIER . statements END
    (8) main_program -> PROGRAM IDENTIFIER . END
    (9) statements -> . statement
    (10) statements -> . statements statement
    (11) statement -> . declaration
    (12) statement -> . assignment
    (13) statement -> . print_stmt
    (14) statement -> . read_stmt
    (15) statement -> . if_stmt
    (16) statement -> . do_loop
    (17) statement -> . goto_stmt
    (18) statement -> . call_stmt
    (19) statement -> . return_stmt
    (20) declaration -> . type_spec var_list
    (26) assignment -> . IDENTIFIER ASSIGN expression
    (27) print_stmt -> . PRINT TIMES print_list
    (30) read_stmt -> . READ TIMES read_list
    (33) if_stmt -> . IF LPAREN expression RPAREN THEN statements ENDIF
    (34) if_stmt -> . IF LPAREN expression RPAREN THEN statements ELSE statements ENDIF
    (35) do_loop -> . DO NUMBER IDENTIFIER ASSIGN expression COMMA expression statements NUMBER CONTINUE
    (36) goto_stmt -> . GOTO NUMBER
    (72) call_stmt -> . CALL IDENTIFIER LPAREN arg_list RPAREN
    (73) call_stmt -> . CALL IDENTIFIER
    (74) return_stmt -> . RETURN
    (21) type_spec -> . INTEGER
    (22) type_spec -> . REAL
    (23) type_spec -> . LOGICAL

    END             shift and go to state 19
    IDENTIFIER      shift and go to state 17
    PRINT           shift and go to state 31
    READ            shift and go to state 32
    IF              shift and go to state 33
    DO              shift and go to state 34
    GOTO            shift and go to state 35
    CALL            shift and go to state 36
    RETURN          shift and go to state 37
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12

    statements                     shift and go to state 18
    statement                      shift and go to state 20
    declaration                    shift and go to state 21
    assignment                     shift and go to state 22
    print_stmt                     shift and go to state 23
    read_stmt                      shift and go to state 24
    if_stmt                        shift and go to state 25
    do_loop                        shift and go to state 26
    goto_stmt                      shift and go to state 27
    call_stmt                      shift and go to state 28
    return_stmt                    shift and go to state 29
    type_spec                      shift and go to state 30

state 15

    (66) subroutine -> SUBROUTINE IDENTIFIER . LPAREN param_list RPAREN statements END
    (67) subroutine -> SUBROUTINE IDENTIFIER . statements END
    (9) statements -> . statement
    (10) statements -> . statements statement
    (11) statement -> . declaration
    (12) statement -> . assignment
    (13) statement -> . print_stmt
    (14) statement -> . read_stmt
    (15) statement -> . if_stmt
    (16) statement -> . do_loop
    (17) statement -> . goto_stmt
    (18) statement -> . call_stmt
    (19) statement -> . return_stmt
    (20) declaration -> . type_spec var_list
    (26) assignment -> . IDENTIFIER ASSIGN expression
    (27) print_stmt -> . PRINT TIMES print_list
    (30) read_stmt -> . READ TIMES read_list
    (33) if_stmt -> . IF LPAREN expression RPAREN THEN statements ENDIF
    (34) if_stmt -> . IF LPAREN expression RPAREN THEN statements ELSE statements ENDIF
    (35) do_loop -> . DO NUMBER IDENTIFIER ASSIGN expression COMMA expression statements NUMBER CONTINUE
    (36) goto_stmt -> . GOTO NUMBER
    (72) call_stmt -> . CALL IDENTIFIER LPAREN arg_list RPAREN
    (73) call_stmt -> . CALL IDENTIFIER
    (74) return_stmt -> . RETURN
    (21) type_spec -> . INTEGER
    (22) type_spec -> . REAL
    (23) type_spec -> . LOGICAL

    LPAREN          shift and go to state 38
    IDENTIFIER      shift and go to state 17
    PRINT           shift and go to state 31
    READ            shift and go to state 32
    IF              shift and go to state 33
    DO              shift and go to state 34
    GOTO            shift and go to state 35
    CALL            shift and go to state 36
    RETURN          shift and go to state 37
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12

    statements                     shift and go to state 39
    statement                      shift and go to state 20
    declaration                    shift and go to state 21
    assignment                     shift and go to state 22
    print_stmt                     shift and go to state 23
    read_stmt                      shift and go to state 24
    if_stmt                        shift and go to state 25
    do_loop                        shift and go to state 26
    goto_stmt                      shift and go to state 27
    call_stmt                      shift and go to state 28
    return_stmt                    shift and go to state 29
    type_spec                      shift and go to state 30

state 16

    (68) function -> type_spec FUNCTION . IDENTIFIER LPAREN param_list RPAREN statements END
    (69) function -> type_spec FUNCTION . IDENTIFIER statements END

    IDENTIFIER      shift and go to state 40


state 17

    (26) assignment -> IDENTIFIER . ASSIGN expression

    ASSIGN          shift and go to state 41


state 18

    (7) main_program -> PROGRAM IDENTIFIER statements . END
    (10) statements -> statements . statement
    (11) statement -> . declaration
    (12) statement -> . assignment
    (13) statement -> . print_stmt
    (14) statement -> . read_stmt
    (15) statement -> . if_stmt
    (16) statement -> . do_loop
    (17) statement -> . goto_stmt
    (18) statement -> . call_stmt
    (19) statement -> . return_stmt
    (20) declaration -> . type_spec var_list
    (26) assignment -> . IDENTIFIER ASSIGN expression
    (27) print_stmt -> . PRINT TIMES print_list
    (30) read_stmt -> . READ TIMES read_list
    (33) if_stmt -> . IF LPAREN expression RPAREN THEN statements ENDIF
    (34) if_stmt -> . IF LPAREN expression RPAREN THEN statements ELSE statements ENDIF
    (35) do_loop -> . DO NUMBER IDENTIFIER ASSIGN expression COMMA expression statements NUMBER CONTINUE
    (36) goto_stmt -> . GOTO NUMBER
    (72) call_stmt -> . CALL IDENTIFIER LPAREN arg_list RPAREN
    (73) call_stmt -> . CALL IDENTIFIER
    (74) return_stmt -> . RETURN
    (21) type_spec -> . INTEGER
    (22) type_spec -> . REAL
    (23) type_spec -> . LOGICAL

    END             shift and go to state 42
    IDENTIFIER      shift and go to state 17
    PRINT           shift and go to state 31
    READ            shift and go to state 32
    IF              shift and go to state 33
    DO              shift and go to state 34
    GOTO            shift and go to state 35
    CALL            shift and go to state 36
    RETURN          shift and go to state 37
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12

    statement                      shift and go to state 43
    declaration                    shift and go to state 21
    assignment                     shift and go to state 22
    print_stmt                     shift and go to state 23
    read_stmt                      shift and go to state 24
    if_stmt                        shift and go to state 25
    do_loop                        shift and go to state 26
    goto_stmt                      shift and go to state 27
    call_stmt                      shift and go to state 28
    return_stmt                    shift and go to state 29
    type_spec                      shift and go to state 30

state 19

    (8) main_program -> PROGRAM IDENTIFIER END .

    PROGRAM         reduce using rule 8 (main_program -> PROGRAM IDENTIFIER END .)
    SUBROUTINE      reduce using rule 8 (main_program -> PROGRAM IDENTIFIER END .)
    INTEGER         reduce using rule 8 (main_program -> PROGRAM IDENTIFIER END .)
    REAL            reduce using rule 8 (main_program -> PROGRAM IDENTIFIER END .)
    LOGICAL         reduce using rule 8 (main_program -> PROGRAM IDENTIFIER END .)
    $end            reduce using rule 8 (main_program -> PROGRAM IDENTIFIER END .)


state 20

    (9) statements -> statement .

    END             reduce using rule 9 (statements -> statement .)
    IDENTIFIER      reduce using rule 9 (statements -> statement .)
    PRINT           reduce using rule 9 (statements -> statement .)
    READ            reduce using rule 9 (statements -> statement .)
    IF              reduce using rule 9 (statements -> statement .)
    DO              reduce using rule 9 (statements -> statement .)
    GOTO            reduce using rule 9 (statements -> statement .)
    CALL            reduce using rule 9 (statements -> statement .)
    RETURN          reduce using rule 9 (statements -> statement .)
    INTEGER         reduce using rule 9 (statements -> statement .)
    REAL            reduce using rule 9 (statements -> statement .)
    LOGICAL         reduce using rule 9 (statements -> statement .)
    ENDIF           reduce using rule 9 (statements -> statement .)
    ELSE            reduce using rule 9 (statements -> statement .)
    NUMBER          reduce using rule 9 (statements -> statement .)


state 21

    (11) statement -> declaration .

    END             reduce using rule 11 (statement -> declaration .)
    IDENTIFIER      reduce using rule 11 (statement -> declaration .)
    PRINT           reduce using rule 11 (statement -> declaration .)
    READ            reduce using rule 11 (statement -> declaration .)
    IF              reduce using rule 11 (statement -> declaration .)
    DO              reduce using rule 11 (statement -> declaration .)
    GOTO            reduce using rule 11 (statement -> declaration .)
    CALL            reduce using rule 11 (statement -> declaration .)
    RETURN          reduce using rule 11 (statement -> declaration .)
    INTEGER         reduce using rule 11 (statement -> declaration .)
    REAL            reduce using rule 11 (statement -> declaration .)
    LOGICAL         reduce using rule 11 (statement -> declaration .)
    ENDIF           reduce using rule 11 (statement -> declaration .)
    ELSE            reduce using rule 11 (statement -> declaration .)
    NUMBER          reduce using rule 11 (statement -> declaration .)


state 22

    (12) statement -> assignment .

    END             reduce using rule 12 (statement -> assignment .)
    IDENTIFIER      reduce using rule 12 (statement -> assignment .)
    PRINT           reduce using rule 12 (statement -> assignment .)
    READ            reduce using rule 12 (statement -> assignment .)
    IF              reduce using rule 12 (statement -> assignment .)
    DO              reduce using rule 12 (statement -> assignment .)
    GOTO            reduce using rule 12 (statement -> assignment .)
    CALL            reduce using rule 12 (statement -> assignment .)
    RETURN          reduce using rule 12 (statement -> assignment .)
    INTEGER         reduce using rule 12 (statement -> assignment .)
    REAL            reduce using rule 12 (statement -> assignment .)
    LOGICAL         reduce using rule 12 (statement -> assignment .)
    ENDIF           reduce using rule 12 (statement -> assignment .)
    ELSE            reduce using rule 12 (statement -> assignment .)
    NUMBER          reduce using rule 12 (statement -> assignment .)


state 23

    (13) statement -> print_stmt .
